datasets/dataset_txt/certbot/certbot_3640.txt
Contributor
kuba commented on 24 Jan 2015
astroid-1.3.4 seems to be incompatible with python 2.6 (c.f. #97):
  File "/home/travis/build/letsencrypt/lets-encrypt-preview/.tox/lint/lib/python2.6/site-packages/astroid-1.3.4-py2.6.egg/astroid/modutils.py", line 69
    get_python_lib(standard_lib=True, prefix=sys.prefix),
                                                        ^
SyntaxError: invalid syntax
ERROR: InvocationError: '/home/travis/build/letsencrypt/lets-encrypt-preview/.tox/lint/bin/pylint --rcfile=.pylintrc letsencrypt'
___________________________________ summary ____________________________________
ERROR:   lint: commands failed
https://travis-ci.org/letsencrypt/lets-encrypt-preview/jobs/48161759#L1633